--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.drag {
+    -webkit-app-region: drag;
+    cursor: move;
+}
+
+.no-drag {
+    -webkit-app-region: no-drag;
+}
